# 1brc-mm

./: .gitignore  Cargo.toml  README.md  output.txt
.cargo/: config.toml
benches/: hash_naive.rs  naive.rs
res/: CreateMeasurements.java  CreateMeasurements_1.java  output.txt
src/: hash_naive.rs  hashmap.rs  lib.rs  main.rs  measurement.rs  naive.rs  str_naive.rs
