[package]
name = "obrc-mm"
version = "0.1.0"
edition = "2021"
authors = ["Mimanshu Maheshwari <maheshwarimimanshu@gmail.com>" ]

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
strip = "debuginfo"

[profile.bench]
debug = false
codegen-units = 1
lto = "fat"
opt-level = "z"
strip = "debuginfo"

[lib]
path = "src/lib.rs"

[[bench]]
name = "naive"
harness = false

[[bench]]
name = "hash_naive"
harness = false

[dev-dependencies]
criterion = { version = "0.3" }

[dependencies]
lazy_static = "1.5.0"
rustc-hash = "2.1.0"
